k8s/simple-web-habor-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-web-deployment
  namespace: simple-web  # Specify namespace here
spec:
  replicas: 1  # Adjust replicas as needed
  selector:
    matchLabels:
      app: web-redis
  template:
    metadata:
      labels:
        app: web-redis
    spec:
      containers:
        - name: web
          image: <habor-ip-address>/<project>/<image-name>  # web image in habor hub
          ports:
            - containerPort: 8050  # Port the web app listens on
        - name: redis
          image: redis:alpine   # Official Redis image from docker hub
          ports:
            - containerPort: 6379  # Redis default port

      imagePullSecrets:
        - name: <habor-secret-name>
